# MasterCasoPractico

./: .gitignore  README.blackwell.md  README.md  TASKs.md  app_backend.py  app_frontend_vtuber_studio.py  dataset_consolidator.ipynb  directory_util.ipynb  output.txt  pyproject.toml  quick_eval_results.csv  quick_qlora_instruct.ipynb  quick_qlora_instruct_xml.ipynb  requirements.txt  run_backend.sh  tutor_data_clean.ipynb
datasets/curated/interview_questions/: ChatGPT-SyntheticData.jsonl  Orcun-Data Science Interview Q&A Treasury.csv  Vineeshsuiii-test-00000-of-00001.parquet  Vineeshsuiii-train-00000-of-00001.parquet  data_science-qa.jsonl  dataset_test.jsonl  dataset_train.jsonl  dataset_val.jsonl  software_engineering-qa.csv
datasets/curated/mirai/train/: MirAI-Dataset - Foundations - test.csv  MirAI-Dataset - Foundations.csv
poc_backend/: README.md  interact_backend.py  interact_backend_master.py  test_endpoint.sh
poc_backend/discord/: chat_client.py  config.py  discord_bot.py  main.py  tts_engine.py
poc_frontend/: README.md  dev.ipynb  main.py  main_tutor.py  requirements.txt
poc_frontend/src/: __init__.py  cli.py  config.py
poc_frontend/src/api/: routes.py
poc_frontend/src/bots/: discord_bot.py  obs_relay.py
poc_frontend/src/pipeline/: chat_pipeline.py
poc_frontend/src/services/: audio.py  llm_client.py  vtuber.py  whisper.py
poc_frontend/src/services/tts/: tts_eleven.py  tts_kokoro.py  tts_provider.py
poc_frontend/src/utils/: audio_fx.py  device_finder.py  kokoro_engine.py  voice_activity_detector.py  vtuber_studio.py
(+2 files in other folders)
